--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.1.0",
     "@nestjs/swagger": "^7.4.0",
     "@prisma/client": "^5.17.0",
+    "axios": "^1.7.2",
     "mongoose": "^8.5.1",
     "prisma": "^5.17.0",
     "prisma-field-encryption": "^1.5.2",
