--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@nestjs/swagger": "^7.4.0",
     "@prisma/client": "^5.17.0",
     "axios": "^1.7.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "mongoose": "^8.5.1",
     "prisma": "^5.17.0",
     "prisma-field-encryption": "^1.5.2",
